--- a/css/common.css
+++ b/css/common.css
@@ -7,24 +7,106 @@ body {
  main {
    flex: 1 0 auto;
  }
- pre code {
-	margin: 0 0 0 40px;
-	padding: 18px 0;
-	display: block;
-}
-.code {
-	margin: 20px 0;
-}
- pre {
-	font-size: 12px;
-	padding: 0;
-	margin: 0;
-	background: #f0f0f0;
-	border-left: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	line-height: 20px;
-	background: url(pre_code_bg.gif) repeat-y left top;
-	width: 600px;
-	overflow: auto;
-	overflow-Y:hidden;
+ hr.style5 {
+   width: 80vw;
+	background-color: #fff;
+	border-top: 2px dashed #8c8b8b;
+　}
+
+ /* post */
+ .entry-content ul li {
+ 	padding:0px;
+ 	margin:0px;
+ }
+
+ .entry-content ul li {
+ 	list-style-type:none !important;
+ 	list-style-image:none !important;
+ 	margin: 5px 0px 5px 0px !important;
+ }
+
+ .entry-content ul li {
+ 	position:relative;
+ 	padding-left:20px;
+ }
+
+ .entry-content ul li:after, .entry-content ul li:before{
+ 	content:'';
+ 	display:block;
+ 	position:absolute;
+ 	top:4px;
+ 	left:8px;
+ 	height:11px;
+ 	width:4px;
+ 	background:#aaa;
+ 	border-radius:10px;
+ 	transform:rotate(45deg);
+ 	-webkit-transform:rotate(45deg);
+ 	-o-transform:rotate(45deg);
+ }
+ .entry-content ul li:before{
+ 	top:8px;
+ 	left:3px;
+ 	height:8px;
+ 	transform:rotate(-45deg);
+ 	-webkit-transform:rotate(-45deg);
+ 	-o-transform:rotate(-45deg);
+ }
+
+ .entry-content ol {
+   counter-reset: my-counter;
+   list-style: none;
+   padding: 0;
+ }
+
+ .entry-content ol li {
+   margin-bottom: 10px;
+   padding-left: 30px;
+   position: relative;
+ }
+ .entry-content ol li:before {
+   content: counter(my-counter);
+   counter-increment: my-counter;
+   background-color: #e64946;
+   color: #ffffff;
+   display: block;
+   float: left;
+   line-height: 22px;
+   margin-left: -30px;
+   text-align: center;
+   height: 22px;
+   width: 22px;
+   border-radius: 50%;
+ }
+
+ .entry-content p code {
+ 	padding: 0.2em;
+ 	padding-top: 0.2em;
+ 	padding-bottom: 0.2em;
+ 	margin: 0.2em;
+ 	font-size: 85%;
+ 	background-color: rgba(0,0,0,0.04);
+ 	border-radius: 3px;
+  border:#000000 dashed 1px;
+ }
+ .entry-content pre {
+   overflow-x: auto;
+     margin: 0;
+     padding: .6em 1.2em;
+     border: 0;
+     border-radius: 3px;
+     background-color: #f7f7f7;
+     white-space: pre;
+     word-wrap: normal;
+     font-size: .8em;
+     line-height: 1.2;
+     border:#000000 dashed 1px;
+ }
+ @media(max-width:768px){
+    .entry-content h1 {
+        font-size: 25px;
+    }
+    .title{
+        font-size: 25px;
+    }
 }
