--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,9 @@ body {
 	border-top: 2px dashed #8c8b8b;
 　}
 
+ .top-title li{
+   display: inline;
+ }
  /* post */
  .entry-content ul li {
  	padding:0px;
@@ -111,7 +114,35 @@ body {
     }
 }
 
+
+/* sns  */
 .title-unserline {
 border-bottom: solid 3px #f48fb1;
 position: relative;
+}
+.fb-like { /* Facebook */
+    display: inline-block;
+    height: 20px;
+    overflow: hidden;
+}
+.fb_iframe_widget span {
+    vertical-align: top !important;
+}
+#___plusone_0, #___plusone_0 iframe { /* Google+ */
+    width: 70px !important;
+}
+.pocket-btn { /* Pocket */
+    display: inline-block;
+    height: 20px;
+    overflow: hidden;
+}
+.pocket-btn iframe { /* Pocket */
+    width: 100px !important;
+    overflow: hidden;
+}
+
+/* 404 */
+.no-content {
+  text-align: center;
+  margin: auto;
 }
